# sgx_client

./: .gitattributes  .gitignore  .gitmodules  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/network/abmatrix/sgx_client/: SgxClientPlugin.kt
cert/: Cargo.toml  Makefile.toml  android.sh  build.rs  ios  ios.sh  makefile
cert/src/: error.rs  lib.rs  macros.rs  types.rs  verify_cert.rs
cert/verify_web/: .gitignore  tsconfig.json
cert/verify_web/public/: global.css  index.html
cert/verify_web/src/api/: util.ts  verify.ts
cert/verify_web/src/page/: Nav.svelte  Upload.svelte
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/network/abmatrix/sgx_client_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: sgx_client.podspec
ios/Classes/: SgxClientPlugin.h  SgxClientPlugin.m  SwiftSgxClientPlugin.swift
lib/: sgx_client.dart
lib/src/: bindings.dart  model.dart  sgx_client.dart  sgx_client_error.dart  sgx_report.dart  utils.dart  verify_bridge.dart
lib/src/ffi/: ffi.dart
test/: sgx_client_test.dart
