[package]
name = "cert"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "verify_mra_cert"
crate-type = ["cdylib"]

[dependencies]
libc = "*"
chrono      = "0.4.5"
webpki      = "0.21"
rustls      = { version = "0.19", features = ["dangerous_configuration"] }
itertools   = "*"
base64      = "0.9.2"
serde_json  = "1.0"
num-bigint  = "*"
bit-vec     = "*"
hex         = "*"
